[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive"] }
crossterm = "0.27.0"
phf = { version = "0.11.2", features = ["macros"] }
rand = "0.8.5"
